--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,65 @@
+:root{
+    --c1: #f39c12;
+    --c2: #100E17;
+}
+
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box;}
 
 html{
-  scroll-behavior: smooth;
-}
+  scroll-behavior: smooth;}
 
 body{
   font-family: 'Roboto Condensed', sans-serif;
+
   color: #ffffff;
-  background-color: #100E17;
-  /* font-size: 62.5%; */
-}
+  background-color: var(--c2);
+  /* font-size: 62.5%; */}
+
 img{
-  max-width: 100%;
-}
+  max-width: 100%;}
+
 h1{
   font-size: 3rem;
-}
+  font-weight: 300;}
+
 h2{
   font-size: 2rem;
-  font-weight: 400;
-}
+  font-weight: 400;}
 
 h3{
   font-size: 1.5rem;
-  font-weight: 300;
-}
+  font-weight: 400;}
+
+  h4{
+    font-size: 1.2rem;
+    font-weight: 300;}
+
 
 .contenedor{
   width: 90%;
+  margin: 0 auto;}
+
+.seccion{
+  padding-bottom: 2.2rem;}
+
+section .box{
+  /* background-color: gray; */
   margin: 0 auto;
 }
-.seccion{
-  padding-bottom: 2.2rem;
-}
+
+  /* --------------Header */
+
 .contenedor_header{
   padding-top: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  height: 90vh;
-}
+  height: 90vh;}
+
 .mi_foto {
   background-image: url("./img/yo.jpg");
   background-position: center center;
@@ -52,20 +67,51 @@ h3{
   background-repeat: no-repeat;
   height: 40vh;
   width: 40vh;
-  /* border: 2px solid black; */
   border-radius: 50%;
-  margin: 0 auto;
-}
+  margin: 0 auto;}
 
 h1{
   padding: 2rem 0 0 0;
-  font-weight: 300; }
-  h1 span{
+  color: var(--c1);}
+
+h1 span{
     font-weight: 400;
-    color: red;
-  }
-  .intro p{
-    font-weight: 300;
-    line-height: 2.5rem;
-    font-size: 1.2rem;
-  }
+    color: #ffffff;}
+
+.intro p{
+  line-height: 2.5rem;
+  font-size: 1.2rem;}
+
+/* --------------Kenntnisse */
+
+.titulo{
+  color: var(--c1);
+  text-align: center;}
+
+.box_skill{
+  margin-top: 2.5rem;}
+
+.grupo_skill{
+  margin-top: 1.5rem;}
+
+.barra {
+  margin: .5rem 0;
+  width: 50%;
+  height: 5px;
+  background-color: var(--c1);}
+
+.grupo_logos{
+  display: grid;
+  grid-template-columns: repeat(4, 20%);
+  justify-content: space-around;
+}
+.logo{
+  /* width: 25%; */
+  filter: invert(100%);
+}
+/* --------------Ausbildung */
+
+
+/* --------------Sprachen */
+
+/* -------------Beruﬂicher Werdegang */
