--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root{
     --c1: #f39c12;
     --c2: #100E17;
+    --c3: #1D1F23;
 }
 
 *{
@@ -46,7 +47,6 @@ h3{
   padding-bottom: 2.2rem;}
 
 section .box{
-  /* background-color: gray; */
   margin: 0 auto;
 }
 
@@ -57,7 +57,7 @@ section .box{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  text-align: center;
+  align-items: center;
   height: 90vh;}
 
 .mi_foto {
@@ -72,13 +72,17 @@ section .box{
 
 h1{
   padding: 2rem 0 0 0;
-  color: var(--c1);}
+  color: var(--c1);
+  text-align: center;}
 
 h1 span{
     font-weight: 400;
     color: #ffffff;}
 
+.intro{width: 70%;}
+
 .intro p{
+  text-align: center;
   line-height: 2.5rem;
   font-size: 1.2rem;}
 
@@ -89,7 +93,10 @@ h1 span{
   text-align: center;}
 
 .box_skill{
-  margin-top: 2.5rem;}
+  margin: 2rem 0;}
+.box_skill:last-child{
+   margin-bottom: 0;}
+
 
 .grupo_skill{
   margin-top: 1.5rem;}
@@ -101,16 +108,33 @@ h1 span{
   background-color: var(--c1);}
 
 .grupo_logos{
-  display: grid;
-  grid-template-columns: repeat(4, 20%);
-  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .logo{
-  /* width: 25%; */
+  background-color: var(--c3);
+  padding: 1rem;
+  flex-basis: calc(50% - .5rem);
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+
+}
+.logo img{
+  width: 30%;
   filter: invert(100%);
 }
-/* --------------Ausbildung */
 
+/* --------------Ausbildung */
+.ausbildung-item{
+  margin-top: 2rem;
+  border-bottom: 1px solid var(--c1);}
+.ausbildung-item:last-child{
+  border-bottom: 0;}
+.aus-description{
+  margin: 2.5rem 0;
+font-size: 1rem;}
 
 /* --------------Sprachen */
 
